tag_parser.y
/*
Y File
Implementing parser using lex and yacc to validate <img> and <a> tag of html

*/

%{
#include<stdio.h>
#include<stdlib.h> 
int yylex();
int yyerror();
extern FILE *yyin;
%}
	
	//tokens generated by lexical analyzer and passed to parser.
%token START_ANGLE_BRACKET NL A_TAG A_ATTRIBUTE SYNTAX_ERROR EQUAL ATTR_VALUE END_TAG1 A_CONTENT A_END_TAG IMG_TAG IMG_ALT IMG_SRC IMG_OTHER_ATTRIBUTE IMG_END_TAG2 IMG_END_TAG3

%%

	//Grammer rules.
	//if stmt is reached msg valid syntax is printed.

stmt : 	S  { printf("\n Valid syntax ...\n\n");
            exit(0);}
		;


	//start symbol(S) goes to <img> tag or <a> tag.
	// START_ANGLE_BRACKET = "<".
	
S 	: START_ANGLE_BRACKET A_TAG anchor_attrs 
	| START_ANGLE_BRACKET IMG_TAG img_comp_attr img_other_attr img_ending
	;


img_comp_attr 	: img_comp_attr_1
				| img_comp_attr_2
				;
img_comp_attr_1 : IMG_SRC IMG_ALT
				;
img_comp_attr_2 : IMG_ALT IMG_SRC	
				;				
img_other_attr 	: IMG_OTHER_ATTRIBUTE img_other_attr
				|
				;
	//img can have three type of end tag >, /> or </img>.
img_ending 		: END_TAG1
				| IMG_END_TAG2
				| IMG_END_TAG3
				;


anchor_attrs 	: A_ATTRIBUTE anchor_attrs
				| END_TAG1 anchor_rem A_END_TAG
				;

	//Tags nesting is done here in <a> tag.			
anchor_rem		: content S anchor_rem  
				| content 
				;
content 		: A_CONTENT content 
				| 
				;

%%

void main()
{
   //printf("\n Enter the string : ");
   printf("enter tag :");
   yyparse();
}

int yyerror(char *msg)
{
   printf("\n Invalid syntax : Error : %s\n\n",msg);
   exit(0);
}
