y.output
Terminals unused in grammar

   NL
   SYNTAX_ERROR
   EQUAL
   ATTR_VALUE


Grammar

    0 $accept: stmt $end

    1 stmt: S

    2 S: START_ANGLE_BRACKET A_TAG anchor_attrs
    3  | START_ANGLE_BRACKET IMG_TAG img_comp_attr img_other_attr img_ending

    4 img_comp_attr: img_comp_attr_1
    5              | img_comp_attr_2

    6 img_comp_attr_1: IMG_SRC IMG_ALT

    7 img_comp_attr_2: IMG_ALT IMG_SRC

    8 img_other_attr: IMG_OTHER_ATTRIBUTE img_other_attr
    9               | /* empty */

   10 img_ending: END_TAG1
   11           | IMG_END_TAG2
   12           | IMG_END_TAG3

   13 anchor_attrs: A_ATTRIBUTE anchor_attrs
   14             | END_TAG1 anchor_rem A_END_TAG

   15 anchor_rem: content S anchor_rem
   16           | content

   17 content: A_CONTENT content
   18        | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
START_ANGLE_BRACKET (258) 2 3
NL (259)
A_TAG (260) 2
A_ATTRIBUTE (261) 13
SYNTAX_ERROR (262)
EQUAL (263)
ATTR_VALUE (264)
END_TAG1 (265) 10 14
A_CONTENT (266) 17
A_END_TAG (267) 14
IMG_TAG (268) 3
IMG_ALT (269) 6 7
IMG_SRC (270) 6 7
IMG_OTHER_ATTRIBUTE (271) 8
IMG_END_TAG2 (272) 11
IMG_END_TAG3 (273) 12


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
stmt (20)
    on left: 1, on right: 0
S (21)
    on left: 2 3, on right: 1 15
img_comp_attr (22)
    on left: 4 5, on right: 3
img_comp_attr_1 (23)
    on left: 6, on right: 4
img_comp_attr_2 (24)
    on left: 7, on right: 5
img_other_attr (25)
    on left: 8 9, on right: 3 8
img_ending (26)
    on left: 10 11 12, on right: 3
anchor_attrs (27)
    on left: 13 14, on right: 2 13
anchor_rem (28)
    on left: 15 16, on right: 14 15
content (29)
    on left: 17 18, on right: 15 16 17


state 0

    0 $accept: . stmt $end

    START_ANGLE_BRACKET  shift, and go to state 1

    stmt  go to state 2
    S     go to state 3


state 1

    2 S: START_ANGLE_BRACKET . A_TAG anchor_attrs
    3  | START_ANGLE_BRACKET . IMG_TAG img_comp_attr img_other_attr img_ending

    A_TAG    shift, and go to state 4
    IMG_TAG  shift, and go to state 5


state 2

    0 $accept: stmt . $end

    $end  shift, and go to state 6


state 3

    1 stmt: S .

    $default  reduce using rule 1 (stmt)


state 4

    2 S: START_ANGLE_BRACKET A_TAG . anchor_attrs

    A_ATTRIBUTE  shift, and go to state 7
    END_TAG1     shift, and go to state 8

    anchor_attrs  go to state 9


state 5

    3 S: START_ANGLE_BRACKET IMG_TAG . img_comp_attr img_other_attr img_ending

    IMG_ALT  shift, and go to state 10
    IMG_SRC  shift, and go to state 11

    img_comp_attr    go to state 12
    img_comp_attr_1  go to state 13
    img_comp_attr_2  go to state 14


state 6

    0 $accept: stmt $end .

    $default  accept


state 7

   13 anchor_attrs: A_ATTRIBUTE . anchor_attrs

    A_ATTRIBUTE  shift, and go to state 7
    END_TAG1     shift, and go to state 8

    anchor_attrs  go to state 15


state 8

   14 anchor_attrs: END_TAG1 . anchor_rem A_END_TAG

    A_CONTENT  shift, and go to state 16

    $default  reduce using rule 18 (content)

    anchor_rem  go to state 17
    content     go to state 18


state 9

    2 S: START_ANGLE_BRACKET A_TAG anchor_attrs .

    $default  reduce using rule 2 (S)


state 10

    7 img_comp_attr_2: IMG_ALT . IMG_SRC

    IMG_SRC  shift, and go to state 19


state 11

    6 img_comp_attr_1: IMG_SRC . IMG_ALT

    IMG_ALT  shift, and go to state 20


state 12

    3 S: START_ANGLE_BRACKET IMG_TAG img_comp_attr . img_other_attr img_ending

    IMG_OTHER_ATTRIBUTE  shift, and go to state 21

    $default  reduce using rule 9 (img_other_attr)

    img_other_attr  go to state 22


state 13

    4 img_comp_attr: img_comp_attr_1 .

    $default  reduce using rule 4 (img_comp_attr)


state 14

    5 img_comp_attr: img_comp_attr_2 .

    $default  reduce using rule 5 (img_comp_attr)


state 15

   13 anchor_attrs: A_ATTRIBUTE anchor_attrs .

    $default  reduce using rule 13 (anchor_attrs)


state 16

   17 content: A_CONTENT . content

    A_CONTENT  shift, and go to state 16

    $default  reduce using rule 18 (content)

    content  go to state 23


state 17

   14 anchor_attrs: END_TAG1 anchor_rem . A_END_TAG

    A_END_TAG  shift, and go to state 24


state 18

   15 anchor_rem: content . S anchor_rem
   16           | content .

    START_ANGLE_BRACKET  shift, and go to state 1

    $default  reduce using rule 16 (anchor_rem)

    S  go to state 25


state 19

    7 img_comp_attr_2: IMG_ALT IMG_SRC .

    $default  reduce using rule 7 (img_comp_attr_2)


state 20

    6 img_comp_attr_1: IMG_SRC IMG_ALT .

    $default  reduce using rule 6 (img_comp_attr_1)


state 21

    8 img_other_attr: IMG_OTHER_ATTRIBUTE . img_other_attr

    IMG_OTHER_ATTRIBUTE  shift, and go to state 21

    $default  reduce using rule 9 (img_other_attr)

    img_other_attr  go to state 26


state 22

    3 S: START_ANGLE_BRACKET IMG_TAG img_comp_attr img_other_attr . img_ending

    END_TAG1      shift, and go to state 27
    IMG_END_TAG2  shift, and go to state 28
    IMG_END_TAG3  shift, and go to state 29

    img_ending  go to state 30


state 23

   17 content: A_CONTENT content .

    $default  reduce using rule 17 (content)


state 24

   14 anchor_attrs: END_TAG1 anchor_rem A_END_TAG .

    $default  reduce using rule 14 (anchor_attrs)


state 25

   15 anchor_rem: content S . anchor_rem

    A_CONTENT  shift, and go to state 16

    $default  reduce using rule 18 (content)

    anchor_rem  go to state 31
    content     go to state 18


state 26

    8 img_other_attr: IMG_OTHER_ATTRIBUTE img_other_attr .

    $default  reduce using rule 8 (img_other_attr)


state 27

   10 img_ending: END_TAG1 .

    $default  reduce using rule 10 (img_ending)


state 28

   11 img_ending: IMG_END_TAG2 .

    $default  reduce using rule 11 (img_ending)


state 29

   12 img_ending: IMG_END_TAG3 .

    $default  reduce using rule 12 (img_ending)


state 30

    3 S: START_ANGLE_BRACKET IMG_TAG img_comp_attr img_other_attr img_ending .

    $default  reduce using rule 3 (S)


state 31

   15 anchor_rem: content S anchor_rem .

    $default  reduce using rule 15 (anchor_rem)
